--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "httpx==0.27.2",
     "pydantic==2.9.2",
     "tiktoken==0.7.0",
+    "fast_depends>=2.4.0",
 ]
 
 [project.optional-dependencies]
