--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "emp-agents"
-version = "0.1.1"
+version = "0.1.1post1"
 description = "A Python library for building low-code, capable and extensible autonomous agent systems."
 readme = "README.md"
 requires-python = ">=3.10"
