--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "emp-agents"
-version = "0.1.4"
+version = "0.1.5"
 description = "A Python library for building low-code, capable and extensible autonomous agent systems."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -42,6 +42,9 @@ tools = [
 test = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.23.0"
+]
+dev = [
+    "jupyter==1.1.1"
 ]
 
 [tool.setuptools.packages.find]
