--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "emp-agents"
-version = "0.1.5.post2"
+version = "0.1.5.post3"
 description = "A Python library for building low-code, capable and extensible autonomous agent systems."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -30,7 +30,7 @@ dependencies = [
     "eth-typeshed-py",
     "fast-depends>=2.4.0",
     "httpx>=0.27.2",
-    "pydantic==2.9.2",
+    "pydantic>=2.9.2",
     "tiktoken==0.7.0",
     "fast_depends>=2.4.0",
     "pyyaml"
