--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ passenv =
     OPENAI_API_KEY
     ANTHROPIC_API_KEY
     OPENROUTER_API_KEY
+    GROK_API_KEY
 
 [testenv:format]
 skip_install = true
