--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "emp-agents"
-version = "0.3.2"
+version = "0.3.3"
 description = "A Python library for building low-code, capable and extensible autonomous agent systems."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10, <4"
 license = {text = "MIT"}
 authors = [
   {name = "Johnny"},
@@ -26,14 +26,15 @@ dependencies = [
     "aiohttp==3.10.5",
     "anthropic==0.42.0",
     "cryptography==43.0.3",
-    "eth-rpc-py",
+    "eth-rpc-py>=0.1.30",
     "eth-typeshed-py",
     "fast-depends>=2.4.0",
     "httpx>=0.27.2",
     "pydantic>=2.9.2",
     "tiktoken==0.7.0",
     "fast_depends>=2.4.0",
-    "pyyaml"
+    "pyyaml",
+    "mcp (>=1.6.0,<2.0.0)"
 ]
 
 [project.optional-dependencies]
@@ -83,5 +84,5 @@ pytest = "^7.0.0"
 pytest-asyncio = "^0.23.0"
 
 [tool.flake8]
-ignore = ["W503"]
+ignore = ["W503", "E704"]
 max-line-length = 160
